hice los endpoints para la segunda entrega, modifique y cree archivos

--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,14 +1,11 @@
-<div>
-    <h1> Selecciona tus productos: {{name}} </h1>
-            <p>id: {{id}}</p>
-            <p>title: {{title}}</p>
-            <p>description:{{Desctiption}}</p>
-            <p>code:{{code}}</p>
-            <p>price:{{price}}</p>
-            <p>status: {{status}}</p>
-            <p>stock: {{stock}}</p>
-            <p>category: {{category}}</p>
-            <p>image:{{image}}</p>
-      
-    
-</div>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{title}}</title>
+</head>
+<body>
+    {{{body}}}
+</body>
+</html>
