--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -1,5 +1,5 @@
 <div>
-    <h1>Productos</h1>
+    <h1>Hola</h1>
     <ul>
         {{#each products}}
         <li>{{this.nombre}} - {{this.precio}}</li>
@@ -7,4 +7,4 @@
     </ul>
 </div>
 <script src="/socket.io/socket.io.js"></script>
-<script src="/js//index.js"></script>
+<script src="/js/index.js"></script>
