--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,25 +1,25 @@
 <div class="container"></div>
-    <h1 class="">PRODUCTS</h1>
+    <h1 class="text-center">PRODUCTS</h1>
 
-    <div class="">
+    <div class="row">
         {{#each listadeproductos}}
-        <div class="">
+        <div class="col">
             <div class="card">
-                <div class="card">
+                <div class="card-header bg-primary text-white">
                     <i class=""></i> Code: {{this.code}}
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">{{this.title}}</h5>
+                    <h5 class="card-title text-white">{{this.title}}</h5>
                     <ul class="list">
-                        <li><i class=""></i> ID: {{this.id}}</li>
-                        <li><i class=""></i> Description: {{this.description}}</li>
-                        <li><i class=""></i> Price: ${{this.price}}</li>
-                        <li><i class=""></i> Category: {{this.category}}</li>
+                        <li><i class="bi"></i> ID: {{this.id}}</li>
+                        <li><i class="bi"></i> Description: {{this.description}}</li>
+                        <li><i class="bi bi-currency-dollar"></i> Price: ${{this.price}}</li>
+                        <li><i class="bi bi-grid"></i> Category: {{this.category}}</li>
                         <li><i class=""></i> Status: {{this.status}}</li>
                         <li><i class=""></i> Stock: {{this.stock}}</li>
                         <li>
-                            <i class=""></i> Image: <img src={{this.thumbnail}} alt="{{this.title}}"
-                                class="">
+                            <i class="image"></i> Image: <img src="{{this.thumbnail}}" alt="{{this.title}}"
+                                class="img">
                         </li>
                     </ul>
                 </div>
@@ -27,4 +27,7 @@
         </div>
         {{/each}}
     </div>
-</div>
+        <br><br>
+<form  class ="formulario-logout" action="/api/session/logout " method="POST">
+      <button type="submit"> Logout </button>
+</form>
