--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,5 @@
-<form class="" id="formProduct"></form>
-    <h2 class="">Real Time Products</h2>
+<form class="" id="formProduct">
+    <h2 class="titulo">Real Time Products</h2>
 
     <!-- Nombre del Producto -->
     <div class="">
@@ -97,6 +97,6 @@
 <div class="" id="list-products">
 
 </div>
-    <script src="/src/routes/realTimeProducts.router.js"></script>  
-    <script src="/src/public/js/realTime.js"></script>   
+    <script src="/socket.io/socket.io.js"></script>  
+    <script src="/js/realTime.js"></script>   
   
