--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,5 +1,6 @@
 <div class="container"></div>
-    <h1 class="text-center">PRODUCTS</h1>
+    <h1> BIENVENIDOS!!! A <strong>SHOP CARS</strong></h1>
+    <h2 class="text-center">PRODUCTOS</h2>
 
     <div class="row">
         {{#each listadeproductos}}
