--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -55,14 +55,6 @@
         </div>
     </div>
 
-    <!-- Estado (Checkbox) -->
-    <div class="">
-        <div class="form-check mt-4">
-            <input name="status" class="form-check-input" type="checkbox" value="true" id="flexCheckChecked" checked>
-            <label class="form-check-label" for="flexCheckChecked">Estado</label>
-        </div>
-    </div>
-
     <!-- Código -->
     <div class="">
         <label for="code" class="form-label">Código</label>
@@ -97,6 +89,6 @@
 <div class="" id="list-products">
 
 </div>
-    <script src="/socket.io/socket.io.js"></script>  
-    <script src="/js/realTime.js"></script>   
-  
+
+<script src="/socket.io/socket.io.js"></script>  
+    <script src="/js/realtime.js"></script>   
