--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -10,13 +10,12 @@
                     <i class=""></i> Code: {{this.code}}
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title text-white">{{this.title}}</h5>
+                    <h5 class="card-title">{{this.title}}</h5>
                     <ul class="list">
                         <li><i class="bi"></i> ID: {{this.id}}</li>
                         <li><i class="bi"></i> Description: {{this.description}}</li>
                         <li><i class="bi bi-currency-dollar"></i> Price: ${{this.price}}</li>
                         <li><i class="bi bi-grid"></i> Category: {{this.category}}</li>
-                        <li><i class=""></i> Status: {{this.status}}</li>
                         <li><i class=""></i> Stock: {{this.stock}}</li>
                         <li>
                             <i class="image"></i> Image: <img src="{{this.thumbnail}}" alt="{{this.title}}"
@@ -28,7 +27,3 @@
         </div>
         {{/each}}
     </div>
-        <br><br>
-<form  class ="formulario-logout" action="/api/session/logout " method="POST">
-      <button type="submit"> Logout </button>
-</form>
