--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,6 +1,6 @@
 <form class="" id="formProduct">
     <h2 class="titulo">Real Time Products</h2>
-    <div>
+    <div class="">
 
         <div class="">
             <label for="title" class="form-label">Nombre del Producto</label>
