--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -6,5 +6,6 @@
         <p>Email: {{user.email}} </p>
         <p> Role: {{user.role}} </p>
         <a href="/api/session/Logout">Logout</a>
+        <a href="/carts/{{cardId}}" class="btn">Ver Carrito</a>
     </div>
 </header>
