--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,11 +1,27 @@
 <header>
     <h1> Mis Productos </h1>
+    <h2>{{product.title}}</h2>
+    <p>Descripción: {{product.description}}</p>
+    <p>Precio: {{product.price}}</p>
+    <p>Categoría: {{product.category}}</p>
+    <button onclick="addToCart('{{product.id}}')">Agregar al Carrito</button>
 
+    <script>
+        function addToCart(productId) {
+            fetch(`/carts/add/${productId}`, {
+                method: 'POST'
+            })
+                .then(response => {
+                    if (response.ok) {
+                        console.log('Producto agregado al carrito.');
+                    } else {
+                        console.log('Error al agregar el producto.');
+                    }
+                });
+        }  
+    </script>
     <div>
-        <p> ¡¡¡ Bienvenido !!!, {{user.first_name}} - {{user.last_name}} </p>
-        <p>Email: {{user.email}} </p>
-        <p> Role: {{user.role}} </p>
-        <a href="/api/session/Logout">Logout</a>
         <a href="/carts/{{cardId}}" class="btn">Ver Carrito</a>
     </div>
 </header>
+        
