--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,27 +1,15 @@
-<header>
-    <h1> Mis Productos </h1>
-    <h2>{{product.title}}</h2>
-    <p>Descripción: {{product.description}}</p>
-    <p>Precio: {{product.price}}</p>
-    <p>Categoría: {{product.category}}</p>
-    <button onclick="addToCart('{{product.id}}')">Agregar al Carrito</button>
+<div>
+    {{#each docs}}
+    <p>{{this}}</p>
+    {{/each}}
 
-    <script>
-        function addToCart(productId) {
-            fetch(`/carts/add/${productId}`, {
-                method: 'POST'
-            })
-                .then(response => {
-                    if (response.ok) {
-                        console.log('Producto agregado al carrito.');
-                    } else {
-                        console.log('Error al agregar el producto.');
-                    }
-                });
-        }  
-    </script>
-    <div>
-        <a href="/carts/{{cardId}}" class="btn">Ver Carrito</a>
-    </div>
-</header>
-        
+    Pagina: {{page}} / {{totalPages}}
+
+    {{#if hasPrevPage}}
+    <a href="/products?page={{prevPage}}"><button>Anterior</button></a>
+    {{/if}}
+
+     {{#if hasNextPage}}
+    <a href="/products?page={{nextPage}}"><button>Siguiente</button></a>
+    {{/if}}
+</div>
