--- a/src/public/css/styles.css
+++ b/src/public/css/styles.css
@@ -1,3 +1,6 @@
+body{
+    background-image: linear-gradient(45deg, #85FFBD 0%, #7debff 100%);
+}
 header {
     display: flex;
     justify-content: space-between;
