--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,16 +1,18 @@
 
 <h2> Login </h2>
 <form action="/api/session/login" method="POST">
+
 <label for="email"> Email: </label>
 <input type="email" name="email" placeholder="email" required>
 
 <br><br>
-
 <label for="password"> Password: </label>
 <input type="text" name="password" placeholder="contraseña" required>
 
 <br><br>
 
-<button type="submit"> Login </button>
+<button type="submit"> Ingresar </button>
  
 </form>
+<h3> Usuario Nuevo?</h3>
+<button onclick="location.href="/register"> Ir a registro </button>
