hice modificaciones en el proyecto

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,4 +1,4 @@
-    <h1> BIENVENIDO !!! {{usuario}} a <strong> SHOP-CARS </strong></h1>
+    <h1> BIENVENIDO !!! {{user.first_name - last_name}} a <strong> SHOP-CARS </strong></h1>
     <h2 class="text-center">PRODUCTOS</h2>
  <form action="/api/session/logout" method="POST">
     <button type="submit">Cerrar sesion</button>
