--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,7 +1,7 @@
 
-<h2> Login </h2>
+<h1> Login </h1>
 <form action="/api/session/login" method="POST">
-
+<h2> Inicio de Sesion </h2>
 <label for="email"> Email: </label>
 <input type="email" name="email" placeholder="email" required>
 
