se hicieron correcciones, y se eliminaron endpoint en el proyecto

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,5 +1,5 @@
     <div>
-        <h1><strong> BIENVENIDO !!! SHOP-CARS </strong></h1>
+        <h1><strong> BIENVENIDO !!! a SHOP-CARS </strong></h1>
         <h2>Email:{{user.email}}</h2>
         <h2> Role: {{user.role}}</h2> 
     </div>
